--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@eslint/js": "^9.17.0",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
@@ -22,6 +23,7 @@
     "eslint": "^9.15.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.2.0",
+    "globals": "^15.14.0",
     "mini-css-extract-plugin": "^2.9.2",
     "sass": "1.81.0",
     "sass-loader": "^16.0.3",
@@ -29,41 +31,5 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es2024": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "rules": {
-      "indent": [
-        "warn",
-        4,
-        {
-          "SwitchCase": 1
-        }
-      ],
-      "quotes": [
-        "warn",
-        "double"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ],
-      "no-unused-vars": [
-        "warn",
-        {
-          "vars": "local",
-          "args": "none",
-          "ignoreRestSiblings": true
-        }
-      ]
-    }
   }
 }
